--- a/Site Stealwar/index.html
+++ b/Site Stealwar/index.html
@@ -1,258 +1,185 @@
 <!DOCTYPE HTML>
-<!--
-	Arcana by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
-	<head>
-		<title>Crystal Games</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="icon" type="images/logo.png" href=" images/logo.png">
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<style>.carousel {
-			width: 500px; /* Largeur du carrousel */
-			overflow: hidden; /* Cache les images hors de la zone visible */
-			margin: 20px auto;
+<head>
+	<title>Crystal Games</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="icon" type="images/logo.png" href=" images/logo.png">
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<style>
+		img {
+			width: 300px; /* Définissez la largeur de l'image */
+			height: auto; /* Laissez la hauteur automatique pour conserver les proportions */
+		}
+	</style>
+</head>
+<body class="is-preload">
+<div id="page-wrapper">
+
+	<!-- Header -->
+	<div id="header">
+
+		<!-- Logo -->
+		<h1><a href="index.html" id="logo">StealWar <em> by Crystal games</em></a></h1>
+
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+				<li class="current"><a href="index.html">Accueil</a></li>
+				<li><a href="ProposDeNous.html">A Propos de Nous</a></li>
+				<li><a href="Avancement.html">Notre Avancement</a></li>
+				<li><a href="Reference.html">Guide de démarrage</a></li>
+				<li><a href="no-sidebar.html">Mentions légales</a></li>
+			</ul>
+		</nav>
+
+	</div>
+
+	<!-- Banner-->
+
+	<div class="carousel">
+		<div class="carousel-inner">
+			<img class="carousel-item" src="images/image4.png" alt="Image 1">
+			<img class="carousel-item" src="images/image2.png" alt="Image 2">
+			<img class="carousel-item" src="images/banner.JPG" alt="Image 3">
+			<img class="carousel-item" src="images/image.png" alt="Image 4">
+		</div>
+		<button class="prev" onclick="prevSlide()">❮</button>
+		<button class="next" onclick="nextSlide()">❯</button>
+	</div>
+
+	<script>
+		let currentIndex = 0;
+
+		function nextSlide() {
+			const carousel = document.querySelector('.carousel-inner');
+			const numSlides = carousel.children.length;
+			currentIndex = (currentIndex + 1) % numSlides;
+			carousel.style.transform = `translateX(${-currentIndex * 100}%)`;
 		}
 
-		.carousel-inner {
-			display: flex; /* Affiche les images en ligne */
-			transition: transform 0.5s ease; /* Animation de transition */
+		function prevSlide() {
+			const carousel = document.querySelector('.carousel-inner');
+			const numSlides = carousel.children.length;
+			currentIndex = (currentIndex - 1 + numSlides) % numSlides;
+			carousel.style.transform = `translateX(${-currentIndex * 100}%)`;
 		}
+	</script>
 
-		.carousel-item {
-			flex: 0 0 auto; /* Empêche les images de changer de taille */
-			width: 500px; /* Largeur d'une image */
-		}
-
-		.prev, .next {
-			cursor: pointer; /* Change le curseur au survol */
-			position: absolute; /* Position absolue par rapport au carousel */
-			top: 50%; /* Alignement vertical au milieu */
-			transform: translateY(-50%); /* Déplace le bouton de moitié de sa hauteur vers le haut */
-			background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
-			color: #fff; /* Couleur du texte */
-			padding: 10px; /* Espacement intérieur */
-			border: none; /* Pas de bordure */
-			z-index: 1; /* Empile le bouton au-dessus des images */
-		}
-
-		.prev {
-			left: 0; /* Alignement à gauche */
-		}
-
-		.next {
-			right: 0; /* Alignement à droite */
-		}
-		</style>
-	</head>
-	<body class="is-preload">
-		<div id="page-wrapper">
-
-			<!-- Header -->
-				<div id="header">
-
-					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Steel War <em> by Crystal games</em></a></h1>
-
-					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
-								<li><a href="ProposDeNous.html">A Propos de Nous</a></li>
-								<li><a href="Avancement.html">Notre Avancement</a></li>
-								<li><a href="left-sidebar.html">Référence</a></li>
-								<li><a href="no-sidebar.html">Mentions légale</a></li>
-							</ul>
-						</nav>
-
-				</div>
-
-			<!-- Banner-->
-				<section>
-					<div class="carousel">
-						<div class="carousel-inner">
-							<img class="carousel-item" src="images/banner.jpeg" alt="Image 1">
-							<img class="carousel-item" src="image2.jpg" alt="Image 2">
-							<img class="carousel-item" src="image3.jpg" alt="Image 3">
-						</div>
-						<button class="prev" onclick="prevSlide()">❮</button>
-						<button class="next" onclick="nextSlide()">❯</button>
-					</div>
-
-					<script>
-						let currentIndex = 0;
-
-						function nextSlide() {
-							const carousel = document.querySelector('.carousel-inner');
-							const numSlides = carousel.children.length;
-							currentIndex = (currentIndex + 1) % numSlides;
-							carousel.style.transform = `translateX(${-currentIndex * 500}px)`;
-						}
-
-						function prevSlide() {
-							const carousel = document.querySelector('.carousel-inner');
-							const numSlides = carousel.children.length;
-							currentIndex = (currentIndex - 1 + numSlides) % numSlides;
-							carousel.style.transform = `translateX(${-currentIndex * 500}px)`;
-						}
-					</script>
-				</section>
-			<!-- Gigantic Heading -->
-			<section class="wrapper style2">
-				<div class="container">
+	<!-- Gigantic Heading -->
+	<section class="wrapper style2">
+		<div class="container">
+			<header class="major">
+				<h2>Notre jeu</h2>
+				<p>N'attendez plus pour télécharger notre jeu
+				</p>
+				<a href="https://www.mediafire.com/file/53910b0xdrhl4zc/StealWar.zip/file" download>  <!-- Ici faut mettre le chemin de notre fichier  -->
+					<button type="button" title="Télécharger le jeu">
+						<i class="fa fa-download"></i> Télécharger le jeu
+					</button>
+				</a>
+			</header>
+		</div>
+	</section>
+	<section id="one" class="main style1">
+		<div class="container">
+			<div class="row gtr-150">
+				<div class="col-6 col-12-medium">
 					<header class="major">
-						<h2>A gigantic heading you can use for whatever</h2>
-						<p>With a much smaller subtitle hanging out just below it</p>
-						<a href="votre_fichier.zip" download>  <!-- Ici faut mettre le chemin de notre fichier  -->
-							<button type="button" title="Télécharger le jeu">
-								<i class="fa fa-download"></i> Télécharger le jeu
-							</button>
-						</a>
+						<h2>Notre inspiration pour<br />
+							StealWar</h2>
 					</header>
+					<p>La nature du projet vient donc d’un jeu de cambriolage. La partie commence par une mise au point stratégique, le voleur choisit ses particularités physiques parmi celles proposées. Il s’agit d’avantages spécifiques limités lui permettant de se spécialiser dans un certain domaine pour avoir un avantage sur celui-ci. Le responsable de la sécurité quant à lui choisit de placer les gardes, incarnés par des intelligences artificielles, les caméras, pièges et autres outils de défense sur la carte à la discrétion du voleur. Cela permet au jeu d’avoir une rejouabilité bien plus grande que si ces éléments étaient fixes pour toutes les parties. Ensuite, la phase de jeu commence et les deux camps s’affrontent indirectement, le but étant de déjouer les plans de l’autre et d’essayer de comprendre la stratégie de l’autre. Si le voleur arrive à passer au travers des obstacles posés par le garde, à savoir caméras, gardes, alarmes, portes verrouillées et autre ajout possible en cours de développement. Alors il lui faut s’enfuir, le policier a alors deux choix, sortir de sa salle et essayer d’aller lui-même attraper le voleur, ou continuer d’essayer de piloter à distance la sécurité de l’endroit.
+					</p>
 				</div>
-			</section>
-			<!-- Highlights -->
-				<section class="wrapper style1">
-					<div class="container">
-						<div class="row gtr-200">
+				<div class="col-6 col-12-medium imp-medium">
+					<span class="image fit"><img src="images/logo1.png" alt="" /></span>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Highlights -->
+	<section class="wrapper style1">
+		<div class="container">
+			<div class="row gtr-200">
 
-							<section class="col-6 col-6-narrower">
-								<div class="box highlight">
-									<i class="icon solid major fa-pencil-alt"></i>
-									<h3>Also Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-								</div>
-							</section>
-							<section class="col-6 col-6-narrower">
-								<div class="box highlight">
-									<i class="icon solid major fa-wrench"></i>
-									<h3>Probably Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-								</div>
-							</section>
-						</div>
+				<section class="col-6 col-6-narrower">
+					<div class="box highlight">
+						<i><span class="image"><img src="images/cop.png" alt="" /></span></i>
+						<h3>Responsable de la sécurité</h3>
+						<p>Son but est d’empêcher le cambrioleur de dérober le précieux butin. Ce joueur se trouve dans une salle isolée du bâtiment, depuis laquelle il lui est possible d’accéder aux caméras de surveillance du lieu cambriolé, lui permettant de repérer son adversaire. Il a aussi en sa possession une carte dynamique stratégique lui permettant d’aiguiller les gardes, de déclencher des pièges, des alarmes et de fermer des portes, dans le but d’empêcher le cambrioleur d’accéder au butin.</p>
 					</div>
 				</section>
-
-
-
-			<!-- Posts -->
-				<section class="wrapper style1">
-					<div class="container">
-						<div class="row">
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>The Third Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>The Fourth Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-						</div>
+				<section class="col-6 col-6-narrower">
+					<div class="box highlight">
+						<i><span class="image"><img src="images/robber.jpg" alt="" /></span></i>
+						<h3>Cambrioleur</h3>
+						<p>Son but principal étant de s’infiltrer dans un bâtiment sécurisé afin de voler le butin, caché dans un endroit spécifique de la carte. Pour cela, il doit éviter les gardes qui rôdent et essaient de l’arrêter. Ces gardes sont des intelligences artificielles qui poursuivent et tentent d’attraper le cambrioleur s'ils l’aperçoivent. Si le cambrioleur parvient à récupérer le butin et à s’échapper dans le temps imparti, il remporte la partie. Si, au contraire, il se fait attraper par un garde ou arrive à la fin du temps imparti, il perd alors la partie.</p>
 					</div>
 				</section>
+			</div>
+		</div>
+	</section>
 
-			<!-- CTA -->
-				<!--<section id="cta" class="wrapper style3">
-					<div class="container">
-						<header>
-							<h2>Are you ready to continue your quest?</h2>
-							<a href="#" class="button">Insert Coin</a>
-						</header>
+
+	<!-- Footer -->
+	<div id="footer">
+		<div class="container">
+			<div class="row">
+				<section class="col-3 col-6-narrower col-12-mobilep">
+					<h3>Liens</h3>
+					<ul class="links">
+						<li class="current"><a href="index.html">Accueil</a></li>
+						<li><a href="ProposDeNous.html">A Propos de Nous</a></li>
+						<li><a href="Avancement.html">Notre Avancement</a></li>
+						<li><a href="Reference.html">Guide de démarrage</a></li>
+						<li><a href="no-sidebar.html">Mentions légale</a></li>
+					</ul>
+				</section>
+				<section class="col-6 col-12-narrower">
+					<h3>Notre histoire</h3>
+					<div>
+						Nous sommes une équipe de passionnés dont le but est de divertir chacun grâce à des jeux pour tout le monde. Nous sommes un groupe d'étudiants qui se sont réunis pour créer des jeux de qualités au goût de chacun. Notre objectif est d’apprendre et de découvrir le monde des jeux vidéo.
 					</div>
-				</section>-->
-
-			<!-- Footer -->
-				<div id="footer">
-					<div class="container">
-						<div class="row">
-							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
-								<ul class="links">
-									<li class="current"><a href="index.html">Home</a></li>
-									<li><a href="ProposDeNous.html">A Propos de Nous</a></li>
-									<li><a href="Avancement.html">Notre Avancement</a></li>
-									<li><a href="two-sidebar.html">Référence</a></li>
-									<li><a href="no-sidebar.html">Mentions légale</a></li>
-								</ul>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<h3>Notre histoire</h3>
-								<div>
-									Nous sommes une équipe de passionnés dont le but est d'améliorer la vie de chacun grâce à des produits disruptifs. Nous fabriquons d'excellents produits pour résoudre vos problèmes commerciaux.
-								</div>
-							</section>
-							<section class="col-3 col-6-narrower col-12-mobilep">
-								<!--<h3>Get In Touch</h3>
-								<form>
-									<div class="row gtr-50">
-										<div class="col-6 col-12-mobilep">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="col-6 col-12-mobilep">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="col-12">
-											<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
-										</div>
-										<div class="col-12">
-											<ul class="actions">
-												<li><input type="submit" class="button alt" value="Send Message" /></li>
-											</ul>
-										</div>
-									</div>
-								</form>-->
-								<h3>Contactez nous</h3>
-								<div>
-									<p2>info@crystal-games.com</p2>
-								</div>
-								<!-- Icons -->
-								<div>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-									<!--							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
-                                                                <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-								</ul>
-								</div>
-							</section>
-						</div>
+				</section>
+				<section class="col-3 col-6-narrower col-12-mobilep">
+					<h3>Contactez nous</h3>
+					<div>
+						<p2>info@crystal-games.com</p2>
 					</div>
-
-
-
-					<!-- Copyright -->
-						<div class="copyright">
-							<ul class="menu">
-								<li>&copy;Crystal Games co. All rights reserved</li><li>Sponsorisé par <a href="https://www.epita.fr/">l'épita</a></li>
-							</ul>
-						</div>
-
-				</div>
-
+					<!-- Icons -->
+					<div>
+						<ul class="icons">
+							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						</ul>
+					</div>
+				</section>
+			</div>
 		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
 
-	</body>
+
+		<!-- Copyright -->
+		<div class="copyright">
+			<ul class="menu">
+				<li>&copy;Crystal Games co. All rights reserved</li><li>Sponsorisé par <a href="https://www.epita.fr/">l'épita</a></li>
+			</ul>
+		</div>
+
+	</div>
+
+</div>
+
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.dropotron.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+
+</body>
 </html>
